--- a/style/style.css
+++ b/style/style.css
@@ -682,6 +682,12 @@ main {
     color: #a52a2a;
 }
 
+.comp-items a,
+.comp-items a:active,
+.comp-items a:hover {
+    color: #a52a2a;
+}
+
 .comp-items:hover h5,
 .comp-items:active h5 {
     opacity: 0;
