--- a/style/style-project.css
+++ b/style/style-project.css
@@ -1,24 +1,26 @@
-
 /* HEAD RESET */
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
     scrollbar-width: none;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
     display: none;
 }
-@font-face{
-	font-family: "Montserrat";
-	src: url('font/Montserrat/Montserrat-Medium.ttf');
+
+@font-face {
+    font-family: "Montserrat";
+    src: url('font/Montserrat/Montserrat-Medium.ttf');
     src: url('font/Montserrat/Montserrat-Light.ttf');
     src: url('font/Montserrat/Montserrat-SemiBold.ttf');
     src: url('font/Montserrat/Montserrat-Bold.ttf');
 }
-body{
+
+body {
     min-height: 100vh;
     background: #1A1D23;
     font-size: 1.2rem;
@@ -28,7 +30,7 @@ body{
 
 /* HEADER */
 
-header{
+header {
     background-color: #1A1D23;
     position: fixed;
     top: 0;
@@ -39,12 +41,14 @@ header{
     z-index: 100;
     box-shadow: 0px 10px 37px -7px rgba(0, 0, 0, 0.27);
 }
-.nav-page{
+
+.nav-page {
     display: block;
     width: 100%;
     padding: 20px;
 }
-.nav-page ul{
+
+.nav-page ul {
     display: flex;
     height: 100%;
     justify-content: center;
@@ -53,23 +57,28 @@ header{
     list-style: none;
     text-align: center;
 }
-.nav-page ul li{
+
+.nav-page ul li {
     padding: 20px 30px;
     position: relative;
     transition: 0.2s;
     cursor: pointer;
 }
-.nav-page ul li:nth-child(2){
+
+.nav-page ul li:nth-child(2) {
     padding: 0 30px;
 }
-.nav-page ul li:nth-child(2):hover{
+
+.nav-page ul li:nth-child(2):hover {
     transform: scale(1.1);
 }
-.nav-page ul li a img{
+
+.nav-page ul li a img {
     height: 70px;
 }
+
 .nav-page ul li:nth-child(1):after,
-.nav-page ul li:nth-child(3):after{
+.nav-page ul li:nth-child(3):after {
     content: '';
     position: absolute;
     top: 54%;
@@ -82,12 +91,14 @@ header{
     border-radius: 4px;
     transition: all 0.2s ease-in-out;
 }
-.nav-page ul li:hover::after{
+
+.nav-page ul li:hover::after {
     height: 80%;
     width: 100%;
-    box-shadow: 0px 8px 23px -7px rgba(0,0,0,0.28);
+    box-shadow: 0px 8px 23px -7px rgba(0, 0, 0, 0.28);
 }
-.nav-page ul li a{
+
+.nav-page ul li a {
     color: whitesmoke;
     text-decoration: none;
     font-weight: 500;
@@ -99,7 +110,7 @@ header{
 
 /* HAUT DE PAGE */
 
-.btn-top{
+.btn-top {
     position: fixed;
     bottom: -4em;
     right: calc(3.45em + 10vw);
@@ -111,19 +122,23 @@ header{
     font-size: 0.9em;
     transition: 0.2s ease-in-out;
 }
-.btn-top:hover, .btn-top:active{
+
+.btn-top:hover,
+.btn-top:active {
     background-color: #a52a2a;
 }
-.btn-top img{
+
+.btn-top img {
     width: 1.5em;
     height: 100%;
     object-fit: contain;
     transform: rotate(180deg);
     display: none;
 }
+
 /* MAIN */
 
-.project-container{
+.project-container {
     margin: 140px auto 120px;
     width: 80%;
     min-height: 80vh;
@@ -134,7 +149,8 @@ header{
     gap: 40px;
     transition: all 0.2s ease-in-out;
 }
-.glass-sec{
+
+.glass-sec {
     box-shadow: 0px 20px 37px -7px rgba(0, 0, 0, 0.27);
     backdrop-filter: blur(5px);
     background-color: #d7d5d91f;
@@ -143,110 +159,142 @@ header{
 
 /* CONTENT */
 
-.sec-content{
+.sec-content {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
-.sec-content > *.sec-desc > *{
+
+.sec-content>*.sec-desc>* {
     padding: 0 1vw;
 }
-.sec-content > *:first-child{
+
+.sec-content>*:first-child {
     margin-top: 10px;
 }
-.sec-content > *:last-child{
+
+.sec-content>*:last-child {
     margin-bottom: 20px;
 }
-.full-img{
+
+.full-img {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.full-img img, .sec-content p{
+
+.full-img img,
+.sec-content p {
     width: 100%;
     height: auto;
 }
-.sub-title{
+
+.sub-title {
     margin-top: 20px;
     font-size: 1.5em;
     font-weight: 500;
     color: antiquewhite;
 }
-.sec-content p, .sec-desc p, .sec-content a, .sec-desc a{
+
+.sec-content p,
+.sec-desc p,
+.sec-content a,
+.sec-desc a {
     line-height: 1.4em;
     letter-spacing: 0.02rem;
 }
-.small-img{
+
+.small-img {
     height: 50vmin;
     width: 100%;
 }
-.small-img img{
+
+.small-img img {
     object-fit: contain;
     height: 100%;
     width: 100%;
 }
-.full-video{
+
+.full-video {
     width: 100%;
     aspect-ratio: 1.8;
 }
-.full-video iframe{
+
+.full-video iframe {
     width: 100%;
     height: 100%;
 }
-.content-link{
+
+.content-link {
     font-weight: 700;
     color: #a52a2a;
     text-decoration: none;
     transition: ease-in-out 0.2s;
 }
-.content-link:hover{
+
+.content-link:hover {
     font-weight: 500;
     color: antiquewhite;
 }
+
+.embed-vertical {
+    border: none;
+    width: 100%;
+    height: 1080px;
+}
+
 /* DESCRIPTION */
 
-.sec-desc{
+.sec-desc {
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
-.sec-desc > *:last-child{
+
+.sec-desc>*:last-child {
     margin-bottom: 40px;
 }
-.project-desc{
+
+.project-desc {
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.project-title{
+
+.project-title {
     font-size: 2em;
     font-weight: 800;
-    color:antiquewhite;
+    color: antiquewhite;
     text-transform: uppercase;
 }
-.project-logo{
+
+.project-logo {
     width: 100%;
     height: auto;
     flex: 0 0 auto;
 }
-.project-logo img{
+
+.project-logo img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.project-logo{
+
+.project-logo {
     flex: 0 0 auto;
 }
-.project-link{
+
+.project-link {
     position: relative;
     font-weight: 500;
     color: antiquewhite;
     text-decoration: none;
     transition: 0.2s ease-in-out;
 }
-.project-link::before{
+
+.project-link::before {
     content: '>';
     position: absolute;
     top: 50%;
@@ -255,22 +303,25 @@ header{
     opacity: 0;
     transition: 0.2s ease-in-out;
 }
-.project-link:hover::before{
+
+.project-link:hover::before {
     opacity: 1;
     font-weight: 600;
 }
-.project-link:hover{
+
+.project-link:hover {
     padding-left: 20px;
     font-weight: 500;
 }
 
 /* FOOTER */
 
-footer{
+footer {
     width: 100%;
     background-color: #16161a;
 }
-footer div{
+
+footer div {
     max-width: 900px;
     margin: auto;
     display: flex;
@@ -280,78 +331,94 @@ footer div{
     align-items: center;
     text-align: center;
 }
-footer div > *{
+
+footer div>* {
     flex: 1 1 33%;
 }
-footer div p{
+
+footer div p {
     color: rgb(216, 216, 216);
     font-size: 0.8em;
     font-weight: 400;
     padding: 10px;
 }
-footer div a{
+
+footer div a {
     color: rgb(216, 216, 216);
     font-size: 0.8em;
     font-weight: 400;
     padding: 10px;
     text-decoration: none;
 }
-footer div a:hover{
+
+footer div a:hover {
     text-decoration: underline;
 }
 
-@media screen and (max-width: 1460px){
-    .project-container{
+@media screen and (max-width: 1460px) {
+    .project-container {
         grid-template-columns: auto;
     }
-    .sec-desc{
+
+    .sec-desc {
         grid-row: 1;
     }
 }
-@media screen and (max-width: 820px){
 
-    .btn-top{
+@media screen and (max-width: 820px) {
+
+    .btn-top {
         right: calc(2rem + 5vw);
     }
 
-    .nav-page{
+    .nav-page {
         padding: 20px 25px;
     }
-    .nav-page ul{
+
+    .nav-page ul {
         gap: 3vw;
     }
-    .nav-page ul li{
+
+    .nav-page ul li {
         padding: 20px 15px;
     }
-    .nav-page ul li a{
+
+    .nav-page ul li a {
         font-size: 0.8em;
     }
 
-    .sub-title{
+    .sub-title {
         font-size: 1.2em;
     }
-    .project-title{
+
+    .project-title {
         font-size: 1.8em;
     }
-    p{
+
+    p {
         font-size: 0.8em;
     }
-    .project-container{
+
+    .project-container {
         width: 90%;
         padding: 40px 30px;
     }
-    footer div{
+
+    footer div {
         flex-direction: column;
     }
 }
-@media screen and (max-width: 414px){
-    .btn-top{
+
+@media screen and (max-width: 414px) {
+    .btn-top {
         padding: 10px 15px;
     }
-    .btn-top img{
+
+    .btn-top img {
         display: block;
     }
-    .btn-top p{
+
+    .btn-top p {
         display: none;
     }
 }
