--- a/style/style-project.css
+++ b/style/style-project.css
@@ -245,6 +245,12 @@ header {
     height: 1080px;
 }
 
+.embed-horizontal {
+    border: none;
+    width: 100%;
+    height: 480px;
+}
+
 /* DESCRIPTION */
 
 .sec-desc {
